Group project add-common-films